# demo-python-panel

./: README.md  app.py  chat.py  pyproject.toml  rating.py  requirements.txt
